[add] PostgreSQL, Redis 및 app Dockerfile 설정 - App 내 PostgreSQL, Redis 연결 설정 - docker-compose 파일 작성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=wallet-server
+
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/wallet}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:wallet}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:wallet}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.PostgreSQLDialect}
+
+spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
+spring.data.redis.port=${SPRING_REDIS_PORT:6379}
+spring.data.redis.password=${SPRING_REDIS_PASSWORD:}
