[refactor] waitTime 및 leaseTime 환경변수화

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialec
 spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
 spring.data.redis.port=${SPRING_REDIS_PORT:6379}
 spring.data.redis.password=${SPRING_REDIS_PASSWORD:}
+
+# Wallet Lock Configuration
+wallet.lock.wait-time=${WALLET_LOCK_WAIT_TIME:2}
+wallet.lock.lease-time=${WALLET_LOCK_LEASE_TIME:3}
