--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
         condition: service_started
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/wallet
-      SPRING_DATASOURCE_USERNAME: wallet
-      SPRING_DATASOURCE_PASSWORD: wallet
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER:-wallet}
+      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD:-wallet}
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
       SPRING_REDIS_HOST: redis
       SPRING_REDIS_PORT: 6379
@@ -22,8 +22,8 @@ services:
     image: postgres:16
     environment:
       POSTGRES_DB: wallet
-      POSTGRES_USER: wallet
-      POSTGRES_PASSWORD: wallet
+      POSTGRES_USER: ${POSTGRES_USER:-wallet}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-wallet}
     ports:
       - "5432:5432"
     volumes:
