--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialec
 
 spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
 spring.data.redis.port=${SPRING_REDIS_PORT:6379}
-spring.data.redis.password=${SPRING_REDIS_PASSWORD:}
+spring.data.redis.password=${SPRING_REDIS_PASSWORD:wallet}
 
 # Wallet Lock Configuration
 wallet.lock.wait-time=${WALLET_LOCK_WAIT_TIME:3}
